@@ -1,3 +1,0 @@
-library(testthat)
-library(ncvreg)
-test_package("ncvreg")
